# speedosk

./: CMakeLists.txt  Config.h.in  SpeedOSK.cpp  SpeedOSK.h  SpeedOSKBoard.cpp  SpeedOSKBoard.h  de.speedprog.speedosk.desktop  keymap_us.conf  main.cpp
